deploy/preproduction/map-mgw/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: map-mgw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-mgw
  serviceName: map-mgw-service
  template:
    metadata:
      labels:
        app: map-mgw
    spec:
      containers:
        - name: map-mgw
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/makeaplea-preprod-ecr:makeaplea_mgw
          imagePullPolicy: Always
          volumeMounts:
            - name: jms
              mountPath: "/opt/jboss/wildfly/standalone/storage"
          ports:
            - containerPort: 8080
            - containerPort: 9990
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: [ "ALL" ]
        - name: map-mgw-dequeue
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/makeaplea-preprod-ecr:makeaplea_mgw_dequeue
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: "/data"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: [ "ALL" ]
        - name: map-mgw-import
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/makeaplea-preprod-ecr:makeaplea_mgw_import
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: "/data"
            - name: archive
              mountPath: "/archive"
            - name: logs
              mountPath: "/logs"
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: [ "ALL" ]
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "gp2-expand" # StorageClass name used to create PV
        resources:
          requests:
            storage: 4Gi
    - metadata:
        name: archive
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "gp2-expand" # StorageClass name used to create PV
        resources:
          requests:
            storage: 4Gi
    - metadata:
        name: logs
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "gp2-expand" # StorageClass name used to create PV
        resources:
          requests:
            storage: 4Gi
    - metadata:
        name: jms
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "gp2-expand" # StorageClass name used to create PV
        resources:
          requests:
            storage: 4Gi
